--- a/src/components/search/search.module.css
+++ b/src/components/search/search.module.css
@@ -126,3 +126,13 @@
     font-size: 14px;
     margin: 5px 0 0;
 }
+@media (prefers-color-scheme: light) {
+    .input, .suggestion .desc, .close {
+        color: black;
+    }
+}
+@media (max-width: 1130px) {
+    .input, .suggestions {
+        width: calc(100% - 20px);
+    }
+}
