--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,23 @@ body {
 p {
   margin: 0;
 }
+@media (prefers-color-scheme: light) {
+  :root {
+    --_black: #ffffff;
+    --_gray: #f2f2f2;
+    --_darkerred: #bb0c16;
+    --_darkred: #f20519;
+    --_red: #f20519;
+  }
+}
 @media (prefers-color-scheme: dark) {
+  :root {
+    --_black: #0d0d0d;
+    --_gray: #262121;
+    --_darkerred: #610e0e;
+    --_darkred: #7f0c16;
+    --_red: #c20414;
+  }
   body {
     background-color: var(--_black);
   }
