--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -15,12 +15,12 @@
     justify-content: space-between;
 }
 .text {display: block;}
-@media (max-width: 450px) {
+@media (max-width: 768px) {
     .content {
         font-size: 16px;
     }
 }
-@media (prefers-color-scheme) {
+@media (prefers-color-scheme: light) {
     .content .text {
         color: black;
     }
