--- a/src/components/search/search.module.css
+++ b/src/components/search/search.module.css
@@ -97,6 +97,11 @@
     gap: 15px;
     padding: 10px;
     margin-top: 10px;
+    max-height: 565px;
+    overflow-y: scroll;
+    overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 .suggestion {
