--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -23,6 +23,9 @@
     transition: 0.25s ease-in-out;
     border: 3px solid rgb(0,0,0,0);
 }
+.navigation a {
+    text-decoration: none;
+}
 .navbutton.show {
     border-bottom: 3px solid var(--_red);
     border-width: fit-content;
