--- a/src/components/search/search.module.css
+++ b/src/components/search/search.module.css
@@ -70,7 +70,7 @@
 }
 
 .input {
-    height: 50px;
+    min-height: 50px;
     width: 100%;
     max-width: 1000px;
     padding: 0 10px;
@@ -131,6 +131,9 @@
     font-size: 14px;
     margin: 5px 0 0;
 }
+.suggestions.hide {
+    padding: 0;
+}
 @media (prefers-color-scheme: light) {
     .input, .suggestion .desc, .close {
         color: black;
@@ -145,5 +148,17 @@
     }
     .close {
         right: 10px;
+    }
+    .suggestions {
+        max-height: none;
+    }
+    .window {
+        height: 90vh;
+    }
+    .close {
+        width: 50px;
+        height: 50px;
+        font-size: 24px;
+        line-height: 50px;
     }
 }
