--- a/src/components/search/search.module.css
+++ b/src/components/search/search.module.css
@@ -97,7 +97,7 @@
     gap: 15px;
     padding: 10px;
     margin-top: 10px;
-    max-height: 565px;
+    max-height: 508.5px;
     overflow-y: scroll;
     overflow-y: scroll;
   scrollbar-width: none;
@@ -109,8 +109,9 @@
     gap: 15px;
     color: white;
     align-items: center;
+    cursor: pointer;
+    transition: 0.5s;
 }
-
 .suggestion .image {
     width: 150px;
     height: 100px;
